@@ -1,0 +1,11 @@
+<!-- validate TOC with odd tags -->
+=Level 1=
+==Level 2==
+===Level 3===
+====Level 4====
+=====Level 5=====
+======Level 6======
+=======Level 7=======
+=====Level 5.1=====
+===== == Level 5.2 == =====
+===== == Level 5.3 =======
