@@ -3,6 +3,9 @@
 
 Bugfixes:
 
+  * Headings of seven or more levels caused generation of invalid HTML.
+    Reported by an anonymous user.
+
 
 0.9.4
 =====
